--- a/profiles.yml
+++ b/profiles.yml
@@ -1,19 +1,21 @@
 dbt_deltastream_example:
   outputs:
     dev:
-      type: deltastream
-      token: your-token-here
-      database: dev
-      schema: public
-      organization_id: your-organization-id-here
+      type: databricks
+      host: your-workspace.cloud.databricks.com
+      http_path: /sql/protocolv1/o/1234567890/0123-456789-abcdefgh
+      token: your_personal_access_token
+      catalog: hive_metastore
+      schema: analytics
+      threads: 4
 
     prod:
-      type: deltastream
-      token: your-token-here
-      database: prod
-      schema: public
-      organization_id: your-organization-id-here
-      #role: your-role-here # Optional
-      #store: your-store-here # Optional
+      type: databricks
+      host: your-workspace.cloud.databricks.com
+      http_path: /sql/protocolv1/o/1234567890/0123-456789-abcdefgh
+      token: your_personal_access_token
+      catalog: hive_metastore
+      schema: analytics
+      threads: 8
 
   target: dev
