--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,5 @@ description = "DBT Delta Stream Example"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "dbt-deltastream",
+    "dbt-snowflake==1.9.2",
 ]
